--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "version": "1.0",
   "permissions": [
     "activeTab",
-    "tabs"
+    "tabs",
+    "storage"
   ],
   "action": {
     "default_popup": "popup/popup.html",
